# linear-examples

./: README.md  cabal.project  run_tests_continuously.sh  stack.yaml
linear-common/: linear-common.cabal
linear-common/src/: DataL.hs  PreludeL.hs  StateL.hs
linear-common/src/PreludeL/: RebindableSyntax.hs
linear-tests/: linear-tests.cabal
linear-tests/src/: Tests.hs
linear-watertight/: linear-watertight.cabal
linear-watertight/src/: DataL.hs  LinearWatertight.hs  NatL.hs  Obj.hs  PreludeL.hs  StateL.hs  Tests.hs  WatertightL.hs
linear-watertight/src/PreludeL/: RebindableSyntax.hs
