name:                linear-common
version:             0.1.0.0
license:             PublicDomain
author:              Samuel GeÌlineau
maintainer:          gelisam+github@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     DataL
                     , PreludeL
                     , PreludeL.RebindableSyntax
                     , StateL
  build-depends:       base
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -W -Wall
